WebIntel v2.0.1 - Self-configuring AI-powered web intelligence system
 Features:
- Auto-setup configuration on first run
- Self-configuring directories and config files
- Enhanced CLI with better error handling
- Comprehensive documentation website
- Fixed PyPI package with proper entry points

 Package:
- PyPI: https://pypi.org/project/webintel/2.0.1/
- CLI Command: webintel search 'query'
- Auto-creates ~/.webintel/ directory
- Includes complete documentation website

 Installation:
pip install webintel
export GEMINI_API_KEY='your-key'
webintel search 'test query'

 Documentation:
- Installation guide
- API reference
- Usage examples
- Real-world use cases

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-docs/
+
 # Distribution / packaging
 .Python
 build/
@@ -71,8 +71,8 @@ instance/
 # Sphinx documentation
 docs/_build/
 
-# Exclude docs directory (separate website)
-docs/
+# Sphinx build directory only
+docs/_build/
 
 # PyBuilder
 target/
@@ -171,8 +171,14 @@ deploy.py
 deployment/
 scripts/
 
-# Documentation website (separate deployment)
-docs/
+# Documentation build artifacts only
+docs/_build/
 
 # Build artifacts
 *.egg-info/
+build/
+dist/
+
+# Extra markdown files
+PROJECT_OVERVIEW.md
+CONTRIBUTING.md
