WebIntel v2.0.2 - Fixed CLI Entry Points & Clean Repository
 MAJOR FIX: Direct CLI Commands Now Work!
-  Fixed: webintel search 'query' (no more python -m webintel.cli needed!)
-  Fixed: webintel --version works directly
-  Fixed: Console script entry points properly configured
-  Fixed: PyPI package with working CLI commands

 Technical Improvements:
- Fixed entry points configuration in pyproject.toml
- Removed conflicting setup.py entry points
- Updated CLI main function for proper console script execution
- Enhanced package structure for better usability

 Package Updates:
- Version: 2.0.2
- PyPI: https://pypi.org/project/webintel/2.0.2/
- All documentation updated to v2.0.2
- Clean repository structure

 Repository Cleanup:
- Removed .github/workflows directory
- Removed unnecessary MD files
- Removed build artifacts and config files
- Clean, focused repository structure

 Perfect User Experience:
pip install webintel
export GEMINI_API_KEY='your-key'
webintel search 'AI trends 2024'  # WORKS DIRECTLY!

 Updated Documentation:
- All docs websites updated to v2.0.2
- README with correct installation commands
- Fixed all PyPI links and version references

This is the FINAL working version with perfect CLI experience!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "webintel"
-version = "2.0.1"
+version = "2.0.2"
 authors = [
     {name = "JustM3Sunny", email = "justm3sunny@gmail.com"},
 ]
@@ -83,6 +83,10 @@ test = [
 ]
 
 [project.scripts]
+webintel = "webintel.cli:main"
+wi = "webintel.cli:main"
+
+[project.entry-points."console_scripts"]
 webintel = "webintel.cli:main"
 wi = "webintel.cli:main"
 
